--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <main class="preview">
+    <main>
+    <div class="preview">
       <div class="preview-img">
         <img src="./images/image-product-mobile.jpg" alt="mobile-image" class="mobile"/>
         <img src="./images/image-product-desktop.jpg" alt="mobile-image" class="desktop"/>
@@ -47,6 +48,7 @@
             Add to Cart
         </button>
       </div>
+    </div>
     </main>
     <footer class="attribution">
       Challenge by
